Fix Hardware tab camera display & Principal tab Events overflow

--- a/src/components/TelemetryWidgets.css
+++ b/src/components/TelemetryWidgets.css
@@ -981,7 +981,7 @@
   font-weight: 700;
 }
 
-
+.tcp-pose {
   min-height: 250px;
 }
 
